<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_workcell_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <author email="chenbn@artc.a-star.edu.sg">Chen Bainian</author>
  <maintainer email="lum_kai_wen@artc.a-star.edu.sg">kai</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ros2run</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosiap_sim_common</depend>
  <depend>rmf_dispenser_msgs</depend>
  <depend>rmf_ingestor_msgs</depend>
  <depend>rmf_task_msgs</depend>
  
  
  <exec_depend>launch</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
